--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -368,8 +368,8 @@ footer {
 /* mobile */
 @media (max-width: 500px) {
     nav {
-        flex-flow: column no-wrap;
-        align-content: center;
+        flex-flow: column nowrap;
+        align-items: center;
         justify-content: center;
         padding: 4% 4%;
     }
